alignment fixed

--- a/src/index.css
+++ b/src/index.css
@@ -255,10 +255,12 @@ img {
     justify-content: center;
     list-style-type: none;
     align-items: center;
+    width: fit-content;
 }
 
 .nav-elements ul li {
     padding: 0 15px;
+    white-space: nowrap;
 }
 
 .nav-elements ul a,
@@ -402,7 +404,6 @@ img {
     display: none;
 }
 
-/* Default (Desktop) */
 .nav-elements .dropdown {
     position: relative;
 }
@@ -411,7 +412,7 @@ img {
     position: absolute;
     top: 100%;
     left: 0;
-    min-width: 220px;
+    min-width: fit-content;
     display: none;
     background: #fff;
     box-shadow: 0 8px 25px rgba(0, 0, 0, 0.08);
@@ -420,13 +421,42 @@ img {
     z-index: 999;
 }
 
-/* Show dropdown */
-.nav-elements .dropdown.open .dropdown-menu {
+.nav-elements .dropdown.open .dropdown-menu,
+.nav-elements .sub-dropdown .sub-dropdown-menu.open {
     display: block;
 }
 
-/* ---------------- MOBILE FIX ---------------- */
+.nav-elements .dropdown-menu .sub-dropdown {
+    position: relative;
+}
 
+.nav-elements .dropdown-menu .sub-dropdown-menu {
+    display: none;
+    position: absolute;
+    top: 0;
+    left: 100%;
+    min-width: 180px;
+    background: #fff;
+    box-shadow: 0 8px 25px rgba(0, 0, 0, 0.08);
+    border-radius: 8px;
+    padding: 10px 0;
+}
+
+.sub-dropdown-toggle {
+    cursor: pointer;
+    font-size: 15px;
+    color: #474747;
+    font-family: var(--heading-font);
+    font-weight: 500;
+}
+
+.sub-dropdown-toggle i {
+    transition: transform 0.3s ease;
+}
+
+.sub-dropdown:hover>.sub-dropdown-toggle i {
+    transform: rotate(90deg);
+}
 
 /* login page */
 .login-container {
@@ -764,8 +794,6 @@ img {
     font-weight: normal;
 }
 
-
-
 #adCarousel img {
     width: 100%;
     height: 310px;
@@ -994,6 +1022,15 @@ img {
     margin: auto;
 }
 
+.v-banner .carousel-control-prev:focus,
+.v-banner .carousel-control-next:focus,
+.v-banner .carousel-control-prev:hover,
+.v-banner .carousel-control-next:hover,
+.v-banner .carousel-control-prev,
+.v-banner .carousel-control-next {
+    opacity: 0;
+}
+
 .v-banner h5 {
     font-weight: 600;
     font-size: 54.75px;
@@ -1006,6 +1043,14 @@ img {
     font-weight: 400;
     font-size: 16.28px;
     text-align: left;
+}
+
+.banner-bg {
+    background-image: url("../public/assets/images/banner-card.png");
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+    min-height: 480px;
 }
 
 .v-banner button {
@@ -1296,8 +1341,7 @@ img {
 }
 
 .live_courses_sec .card_parent.one {
-    /* background: #EDFBFF; */
-    background: var(--c2);
+    background: #EDFBFF;
 }
 
 .live_courses_sec .card_parent.two {
@@ -1308,6 +1352,24 @@ img {
 .live_courses_sec .card_parent.two .bg-caption {
     color: #000000;
     background-color: #ffffff;
+}
+
+.level-badge {
+    border-radius: 5px;
+    padding: 3px 7px;
+    color: #ffffff;
+}
+
+.level-badge.level-beginner {
+    background: #28a745;
+}
+
+.level-badge.level-intermediate {
+    background: #ff9800;
+}
+
+.level-badge.level-advanced {
+    background: #d32f2f;
 }
 
 .live_courses_sec .card_parent .card_img_parent {
@@ -1354,6 +1416,7 @@ img {
     background-color: #D9D9D9;
     border-radius: 5px;
     padding: 3px 7px;
+    border: none;
 }
 
 .card_button_parent {
@@ -1394,7 +1457,7 @@ img {
 }
 
 .card_button_parent .card_button_parent button:hover,
-.live_courses_sec .card_parent.two .card_button_parent button:hover {
+.live_courses_sec .card_parent .card_button_parent button:hover {
     background: var(--c2);
     border: 1px solid transparent;
     transition: all .3s ease-out;
@@ -1402,7 +1465,6 @@ img {
 
 /* live-course - end */
 /* testimonial - start */
-
 .testimonial_wrap {
     padding: 100px 0;
     position: relative;
@@ -1427,10 +1489,11 @@ img {
 .testimonial_parent {
     box-shadow: 0px 4px 18.6px 19px #00000040;
     border-radius: 15px 67px;
-    padding: 50px 70px;
+    padding: 65px 0 50px;
     background-color: #ffffff;
     position: relative;
     z-index: 1;
+    /* keep swiper clipping */
 }
 
 .testimonial_parent p {
@@ -1439,12 +1502,35 @@ img {
     font-size: 20px;
     text-align: center;
     line-height: 40px;
+    padding: 0 70px;
+}
+
+.testimonial_img_wrap {
+    width: 140px;
+    height: 140px;
+    border-radius: 50%;
+    overflow: hidden;
+    box-shadow: -7px 10px 11px 0px #00000085;
+    position: absolute;
+    top: -70px;
+    right: -40px;
+    z-index: 5;
+}
+
+.testi_img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
 /* testimonial - end */
 /* logo */
 .swiper-wrapper {
     align-items: center;
+}
+
+.logo_swiper .swiper-wrapper {
+    transition-timing-function: linear !important;
 }
 
 .partner-logo {
@@ -2148,7 +2234,7 @@ section {
     .menu-icon {
         display: block;
         cursor: pointer;
-        width: 52px;
+        width: 35px;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -2169,6 +2255,7 @@ section {
 
     .nav-elements.active {
         width: 100%;
+        top: 62px;
     }
 
     .nav-elements ul {
@@ -2197,6 +2284,14 @@ section {
 
 
 @media screen and (max-width: 390px) {
+    .nav-elements.active {
+        top: 52px;
+    }
+
+    .nav_mbl_icons i {
+        font-size: 16px;
+    }
+
     .logo img {
         width: 150px !important;
         object-fit: contain;
@@ -2245,6 +2340,10 @@ section {
         padding-right: 75px !important;
     }
 
+    .nav-elements .dropdown-menu .sub-dropdown:hover .sub-dropdown-menu {
+        display: block;
+    }
+
     .dropdown:hover .dropdown-menu {
         opacity: 1;
         visibility: visible;
@@ -2255,6 +2354,7 @@ section {
 
 @media screen and (max-width: 910px) {
 
+    .nav-elements .dropdown-menu .sub-dropdown-menu,
     .nav-elements .dropdown-menu {
         position: static;
         border: none;
@@ -2278,6 +2378,7 @@ section {
         /* indent */
     }
 
+    .nav-elements .dropdown-menu .sub-dropdown-menu a,
     .nav-elements .dropdown-menu a {
         padding: 10px 0;
         display: block;
